# Tubular-PC

./: .gitignore  BUG_FIX_INSTRUCTION.md  CHANGELOG.md  CONTRIBUTING.md  Features.md  IMPLEMENTATION_STATUS.txt  LICENSE  QUICK_START.md  README.md  SETUP.md  TODO.md  complete_project.md  features.md  plan.md  prompt.md  start.bat  start.sh
backend/: Cargo.toml
backend/src/: api.rs  cli.rs  db.rs  invidious.rs  lib.rs  main.rs  player.rs  returnyoutubedislike.rs  sponsorblock.rs  yt_dlp.rs
frontend/: README.md  analysis_options.yaml  pubspec.yaml
frontend/lib/: main.dart  providers.dart
frontend/lib/controllers/: player_controller.dart
frontend/lib/models/: dislike.dart  dislike.g.dart  download.dart  download.g.dart  history_entry.dart  history_entry.g.dart  notification.dart  sponsorblock.dart  sponsorblock.g.dart  subscription.dart  subscription.g.dart  subtitle_search.dart  video.dart  video.g.dart  video_details.dart
frontend/lib/providers/: cloud_sync_provider.dart  recording_provider.dart  streaming_provider.dart
frontend/lib/screens/: bookmarks_screen.dart  channel_screen.dart  downloads_screen.dart  history_screen.dart  home_screen.dart  keyboard_shortcuts_screen.dart  notifications_screen.dart  player_screen.dart  playlists_screen.dart  settings_screen.dart  subscriptions_screen.dart  theme_customization_screen.dart  trending_screen.dart  video_details_screen.dart
frontend/lib/services/: api_service.dart  keyboard_shortcut_listener.dart  (+4 more)
frontend/linux/: CMakeLists.txt
frontend/test/: history_screen_test.dart  widget_test.dart
(+22 files in other folders)
