[package]
name = "tubular_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
lazy_static = "1.4"
rusty_ytdl = { version = "0.7", features = ["search"] }
futures = "0.3"
urlencoding = "2.1"

[lib]
name = "tubular_backend"
path = "src/lib.rs"

[[bin]]
name = "tubular_backend"
path = "src/main.rs"
